Switch to auto-rescue for newts and update UI feedback
Replaces manual rescue (E key/tap/button) with automatic rescue when the player approaches a newt. Removes rescue prompts and related controls from the UI and HTML. Adds animated rescue feedback and updates battery boost and haptic feedback to trigger on auto-rescue. Refactors newt management logic to support auto-rescue and cleans up related code.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div id="start-screen" class="overlay">
         <div class="overlay-content">
             <h1><i class=\"fas fa-lightbulb\"></i> Newt Rescue</h1>
-            <p class="subtitle">Rescue newts on a rainy night.</p>
+            <p class="subtitle">Rescue newts crossing the road.</p>
             
             <div class="instructions minimal">
                 <ul>
                     <li><strong>Move</strong> WASD / Joystick</li>
                     <li><strong>Look</strong> Mouse / Touch</li>
-                    <li><strong>Rescue</strong> E / Rescue button when lit</li>
+                    <li><strong>Rescue</strong> Walk over to a newt</li>
                 </ul>
                 <p class="micro-note">Avoid traffic. Battery refills on rescue.</p>
             </div>
@@ -100,9 +100,7 @@
             <span id="time">0:00</span>
         </div>
         
-        <div id="rescue-prompt" class="hidden">
-            Press <strong>E</strong> or <strong>Tap</strong> to Rescue!
-        </div>
+
     </div>
 
     <!-- Mobile Controls -->
@@ -113,7 +111,6 @@
             </div>
         </div>
         <div id="mobile-buttons">
-            <button id="rescue-button"><i class="fas fa-hand-holding-heart"></i><br>RESCUE</button>
         </div>
         <div id="look-area"></div>
     </div>
