Add curved road, flashlight toggle & movement
Introduce a winding road and update AI/player interactions: create a CatmullRom curved road (extruded geometry) with road markings and expanded map bounds; increase road length to 280 and scale environment assets (trees, puddles, cliff, reservoir). Wire the roadCurve into CarManager and NewtManager so cars follow the curve (lane offsets, smooth position/rotation, curve T tracking) and newts spawn/move relative to the curved road (getRoadDataAtZ helper). Add flashlight on/off state and toggle support (F key + mobile button), ensure battery only drains when on, implement flicker/visual intensity changes, and add UI updates/haptics for mobile. Hook up managers in main.js, add flashlight toggle callbacks, and smooth deltaTime calculation to reduce jitter. Misc: various numeric/visual tweaks for gameplay balance and mobile sizing.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <ul>
                     <li><strong>Move</strong> WASD / Joystick</li>
                     <li><strong>Look</strong> Mouse / Touch</li>
+                    <li><strong>Flashlight</strong> F key / Light button</li>
                     <li><strong>Rescue</strong> Walk over to a newt</li>
                 </ul>
-                <p class="micro-note">Avoid traffic. Battery refills on rescue.</p>
+                <p class="micro-note">Avoid traffic. Battery refills on rescue. Toggle light to save battery!</p>
             </div>
             
             <div class="button-row">
@@ -111,6 +112,10 @@
             </div>
         </div>
         <div id="mobile-buttons">
+            <button id="flashlight-toggle-btn" class="mobile-btn">
+                <i class="fas fa-lightbulb"></i>
+                <span class="btn-label">Light</span>
+            </button>
         </div>
         <div id="look-area"></div>
     </div>
