Use SVG flashlight icon with fade-in
Replace the Font Awesome lightbulb in the start screen heading with an inline SVG flashlight and add styling/animation. Added .flashlight-icon rules and @keyframes flashlightFadeIn to css/game.css to provide a subtle fade/translate and drop-shadow effect. Changes polish the UI and remove reliance on the font icon for the start screen.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Start Screen -->
     <div id="start-screen" class="overlay">
         <div class="overlay-content">
-            <h1><i class="fas fa-lightbulb"></i> Newt Rescue</h1>
+            <h1><svg class="flashlight-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 50" width="44" height="22"><rect x="4" y="15" width="36" height="20" rx="3" fill="#ffd700"/><rect x="24" y="11" width="10" height="4" rx="1.5" fill="#e6c200"/><path d="M40 13 L40 37 L70 42 L70 8 Z" fill="#ffd700"/><rect x="70" y="7" width="4" height="36" rx="2" fill="#e6c200"/><line x1="76" y1="16" x2="88" y2="10" stroke="#ffd700" stroke-width="2" stroke-linecap="round" opacity="0.45"/><line x1="76" y1="25" x2="90" y2="25" stroke="#ffd700" stroke-width="2" stroke-linecap="round" opacity="0.45"/><line x1="76" y1="34" x2="88" y2="40" stroke="#ffd700" stroke-width="2" stroke-linecap="round" opacity="0.45"/></svg> Newt Rescue</h1>
             <p class="subtitle">Rescue newts crossing the road.</p>
             
             <div class="instructions minimal">
