--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <div class="button-row">
                 <button id="start-button"><i class="fas fa-play"></i> Start Game</button>
                 <button id="view-leaderboard-btn"><i class="fas fa-trophy"></i> Leaderboard</button>
+                <button id="fullscreen-start-btn"><i class="fas fa-expand"></i> Fullscreen</button>
             </div>
         </div>
     </div>
